<resources>
    <string name="app_name">Traffic</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_map">Direction</string>
    <string name="title_activity_route">Route</string>
    <string name="phone">Phone</string>
    <string name="vehicle_prompt">Choose a vehicle</string>
    <string-array name="vehicle_entries">
        <item>Bike</item>
        <item>Car</item>
        <item>Truck</item>
    </string-array>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="traffic">Traffic Intensity</string>
    <string name="set">Set</string>
    <string name="default_traffic">2</string>
    <string name="best_route">Best Route</string>
    <string name="alternate_route">All Routes</string>
    <string name="distance">Distance</string>
    <string name="default_distance">500</string>
    <string name="route_prompt">Select a route</string>
</resources>
